Edited for slightly better IE compatibility.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <div class="news-grid three-column-news">
         <div class="news-item">
           <div class="news-item-content">
-            <div class="news-item-content-image" style="background-image: url('assets/img/photo1.jpg')">
+            <div class="news-item-content-image">
+              <img src="assets/img/photo1.jpg" alt="">
               <button class="news-button-play">
                 <img src="assets/img/triangle.svg" alt="play button">
               </button>
@@ -39,7 +40,8 @@
         </div>
         <div class="news-item">
           <div class="news-item-content">
-            <div class="news-item-content-image" style="background-image: url('assets/img/photo2.jpg')">
+            <div class="news-item-content-image">
+              <img src="assets/img/photo2.jpg" alt="">
             </div>
             <div class="news-item-content-text">
               <div class="news-item-content-type">Congress</div>
@@ -55,7 +57,8 @@
         </div>
         <div class="news-item">
           <div class="news-item-content">
-            <div class="news-item-content-image" style="background-image: url('assets/img/photo3.jpg')">
+            <div class="news-item-content-image">
+              <img src="assets/img/photo3.jpg" alt="">
             </div>
             <div class="news-item-content-text">
               <div class="news-item-content-type">White House</div>
@@ -73,7 +76,8 @@
       <div class="news-grid two-column-news">
         <div class="news-item">
           <div class="news-item-content">
-            <div class="news-item-content-image" style="background-image: url('assets/img/photo4.jpg')">
+            <div class="news-item-content-image">
+              <img src="assets/img/photo4.jpg" alt="">
             </div>
             <div class="news-item-content-text">
               <div class="news-item-content-type">Elections</div>
@@ -90,7 +94,8 @@
         </div>
         <div class="news-item">
           <div class="news-item-content">
-            <div class="news-item-content-image" style="background-image: url('assets/img/photo5.jpg')">
+            <div class="news-item-content-image">
+              <img src="assets/img/photo5.jpg" alt="">
             </div>
             <div class="news-item-content-text">
               <div class="news-item-content-type">Trade</div>
