final draft commit

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="news-item">
           <div class="news-item-content">
             <div class="news-item-content-image">
-              <img src="assets/img/photo1.jpg" alt="">
+              <img src="assets/img/photo1.jpg" alt="A stairway railing is pictured.">
               <button class="news-button-play">
                 <img src="assets/img/triangle.svg" alt="play button">
               </button>
@@ -41,7 +41,7 @@
         <div class="news-item">
           <div class="news-item-content">
             <div class="news-item-content-image">
-              <img src="assets/img/photo2.jpg" alt="">
+              <img src="assets/img/photo2.jpg" alt="Congresspersons are pictured.">
             </div>
             <div class="news-item-content-text">
               <div class="news-item-content-type">Congress</div>
@@ -58,7 +58,7 @@
         <div class="news-item">
           <div class="news-item-content">
             <div class="news-item-content-image">
-              <img src="assets/img/photo3.jpg" alt="">
+              <img src="assets/img/photo3.jpg" alt="Dina Powell is pictured.">
             </div>
             <div class="news-item-content-text">
               <div class="news-item-content-type">White House</div>
@@ -77,7 +77,7 @@
         <div class="news-item">
           <div class="news-item-content">
             <div class="news-item-content-image">
-              <img src="assets/img/photo4.jpg" alt="">
+              <img src="assets/img/photo4.jpg" alt="Campaign posters are pictured.">
             </div>
             <div class="news-item-content-text">
               <div class="news-item-content-type">Elections</div>
@@ -95,7 +95,7 @@
         <div class="news-item">
           <div class="news-item-content">
             <div class="news-item-content-image">
-              <img src="assets/img/photo5.jpg" alt="">
+              <img src="assets/img/photo5.jpg" alt="Gary Cohn is pictured.">
             </div>
             <div class="news-item-content-text">
               <div class="news-item-content-type">Trade</div>
